<resources>
    <string name="app_name">AndroidBurgerProject</string>
    <string name="h3_headline">PA Mobile Login</string>
    <string name="logo">Logo</string>
    <string name="username_placeholder">eg: email@domain.com</string>
    <string name="password_placeholder">eg: ************</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="na">NA</string>
    <string name="fill_your_basket">Homepage</string>
    <string name="menus">Menus</string>
    <string name="basket_logo">Basket Logo</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="menus_title">Menus !</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout !</string>
    <string name="item_image">Item image</string>
    <string name="personal_information">Personal Information</string>
    <string name="shipping">Shipping</string>
    <string name="confirm_order">Confirm order</string>
    <string name="shipping_stepper_indicator">Shipping stepper indicator</string>
    <string name="home_information">Home information</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="zip">ZIP</string>
    <string name="city">City</string>
    <string name="order">Order:</string>
    <string name="delivery">Delivery :</string>
    <string name="summary">Summary :</string>
    <string name="change_address">Change Address</string>
    <string name="complete_order">Complete Order</string>
    <string name="congratulations">Congratulations !</string>
    <string name="order_complete_sentence">Your order has been taken\nand is being attended to</string>
    <string name="track_order">Track Order</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="category_title">Browse Products</string>
    <string name="profile_title">Profile</string>
    <string name="google_client_id">738804068929-nt49tjdbnc290f5ju58pd937mnvj6etv.apps.googleusercontent.com</string>
    <string name="address_name">Address name</string>
    <string name="logout">Logout</string>
    <string name="is_admin">Admin role :</string>
    <string name="email">Email :</string>
    <string name="h3_subscribe">Create your account !</string>
    <string name="email_placeholder">eg: my_email</string>
    <string name="subscribe">signup</string>
    <string name="guest">guest</string>
    <string name="address_placeholder">eg: my_address</string>
    <string name="address">Address</string>
    <string name="name">Name :</string>
    <string name="undefined">not defined</string>
    <string name="order_history">Order History</string>
    <string name="loading">Loading...</string>
    <string name="view">View</string>
</resources>