<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/connexion_page"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/soft_green"
    android:elevation="4dp">

    <TextView
        android:id="@+id/h3_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:text="@string/h3_headline"
        android:textColor="@color/light_grey"
        android:textAppearance="@style/h3_headline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/outlined_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/outlined_email"
        android:hint="@string/username_placeholder"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/h3_headline"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/outlined_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/outlined_password"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlined_email"
        app:layout_constraintVertical_bias="0.05" />

    <android.widget.Button
        android:id="@+id/login_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlined_password"
        app:layout_constraintVertical_bias="0.1" />


    <android.widget.Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/skip_button"
        android:text="@string/subscribe"
        android:textColor="@color/light_grey"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_submit" />
</androidx.constraintlayout.widget.ConstraintLayout>